--- a/web/client/app/components/alerts/alerts.html
+++ b/web/client/app/components/alerts/alerts.html
@@ -31,7 +31,7 @@
                   </div>
                   <div class="stat_text">
                      <strong>Red Stop Lamp Status</strong>
-                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.engineAlerts.redStop }} </span> 
+                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.red_stop_lamp_status}} </span> 
                   </div>
                </li>
                <li>
@@ -40,7 +40,7 @@
                   </div>
                   <div class="stat_text">
                      <strong>Malfunction Indicator Lmp Status</strong>
-                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.engineAlerts.malfunctionIndicator }}</span> 
+                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.malfunction_indicator_lamp_status }}</span> 
                   </div>
                </li>
                <li>
@@ -49,7 +49,7 @@
                   </div>
                   <div class="stat_text">
                      <strong>Protect Lamp Status</strong>
-                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.engineAlerts.protectLamp }}</span> 
+                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.protect_lamp_status }}</span> 
                   </div>
                </li>
                <li>
@@ -58,16 +58,7 @@
                   </div>
                   <div class="stat_text">
                      <strong>Amber Lamp Status</strong>
-                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.engineAlerts.amberLamp }}</span> 
-                  </div>
-               </li>
-               <li>
-                  <div class="sparkline line_day">
-                     <md-icon style="font-size: 45px;" md-font-icon="icon-information"></md-icon>
-                  </div>
-                  <div class="stat_text">
-                     <strong>DGE/Hrs</strong>
-                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.engineAlerts.dgeHrs }}</span> 
+                     <span class="percent up"> <i class="fa fa-caret-up"></i>{{ vm.amber_lamp_status }}</span> 
                   </div>
                </li>
             </ul>
@@ -86,8 +77,8 @@
                     <table class="table table-bordered table-striped">
                   <thead>
                      <tr>
-                        <td>Last Three Maintenance</td>
-                        <td>Engine Hours After Maintenance</td>
+                        <td>Maintenance Date (Past)</td>
+                        <td>Engine Hours</td>
                      </tr>
                   </thead>
                     <tr ng-repeat="main in vm.scheMaintenance">
@@ -128,15 +119,6 @@
                   <h3 class="panel-title">Logs</h3>
                </div>
                <div class="panel-body">
-                  <md-list>
-                     <div ng-repeat="item in vm.logs">
-                        <activity-list-item activity="item"></activity-list-item>
-                        <md-divider>
-                     </div>
-                     <div ng-if="!vm.logs.length">
-                        <p>No items to display.</p>
-                     </div>
-                  </md-list>
                   <md-list>
                      <div ng-repeat="item in vm.filteredActivityAlarmItems | orderBy: '-timestamp'">
                         <alarm-list-item ng-if="item.type === 'alarm'" alarm="item"></alarm-list-item>
