--- a/web/client/app/components/fuel/fuel.html
+++ b/web/client/app/components/fuel/fuel.html
@@ -117,7 +117,7 @@
                      </tr>
                   </thead>
                   <tbody>
-                     <tr ng-repeat="roll in vm.sushi | orderBy:vm.sortType:vm.sortReverse | filter:searchFish">
+                     <tr ng-repeat="roll in vm.deviceslist | orderBy:vm.sortType:vm.sortReverse | filter:searchFish">
         <td><a ui-sref="efficiency({vechicle_id:roll.name})">{{ roll.name }}</a></td>
         <td>{{ roll.type }}</td>
         <td>
@@ -128,7 +128,7 @@
         </tbody>
         </table>
         <center>
-            <div ng-if="(vm.sushi | filter:searchFish).length==0">No Vehicle to Display</div>
+            <div ng-if="(vm.deviceslist | filter:searchFish).length==0">No Vehicle to Display</div>
         </center>
     </div>
 </div>
